# proj-tests-task

./: README.md  pyproject.toml  test1.py  test2.py  test3.py  test4.py
