[tool.poetry]
name = "proj tests"
version = "0.1.0"
description = ""
authors = ["Serhii Didenko <srg.dd0@gmail.com>"]
license = "gpl"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
locust = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
